--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ehrler Ethan</title>
-    <link rel="shortcut icon" href="#" type="image/png">
+    <link rel="shortcut icon" href="img/E.png" type="image/png">
     <meta name="description" content="">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
@@ -11,7 +11,7 @@
     <div class="transition transition-slide is-active"></div>
     <header>
         <nav>
-            <h1>Ehrler Ethan</h1>
+            <h1 class="logo">Ehrler Ethan <img width="30px" src="img/E.png" alt=""></h1>
             <div class="nav-container">
                 <div class="language">
                     <a href="index-en.html">EN</a>
@@ -33,6 +33,7 @@
             <div class="button-container">
                 <button onclick="window.location.href='projets.html';">Projets</button>
                 <button onclick="window.location.href='competences.html';">Compétences</button>
+                <button onclick="window.location.href='a-propos-de-moi.html';">A propos de moi</button>
             </div>
         </div>
     </div>
