--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ehrler Ethan</title>
-    <link rel="shortcut icon" href="#" type="image/png">
+    <link rel="shortcut icon" href="img/E.png" type="image/png">
     <meta name="description" content="">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
@@ -24,13 +24,77 @@
             </div>
         </nav>
     </header>
-    
     <div class="projects-container">
         <div class="projects-content">
-            <h2>Création d'un site de vente au enchères</h2>
+            <button class="accordion">Création d'un site de vente aux enchères</button>
+            <div class="panel">
+                <p>Nom du projet : Intemporal</p>
+                <br>
+                <p>Date de réalisation : 2023</p>
+                <br>
+                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montre nommé au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et Javascript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
+                <br>
+                <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
+                <br>
+                <div class="image-container">
+                    <img src="img/intemporal/intemporal-1.png" alt="">
+                    <img src="img/intemporal/intemporal-2.png" alt="">
+                    <img src="img/intemporal/intemporal-3.png" alt="">
+                    <img src="img/intemporal/intemporal-4.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Création d'un premier site à propos de moi</button>
+            <div class="panel">
+                <p>Nom du projet : Me</p>
+                <br>
+                <p>Date de réalisation : 2022</p>
+                <br>
+                <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et Javascript.</p>
+                <br>
+                <p>Voici le lien de celui-ci :</p>
+                <br>
+                <a href="https://erlow38.github.io/">Mon site</a>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Développement d'une application d'organisation évènementielle</button>
+            <div class="panel">
+                <p>Nom du projet : Hopack</p>
+                <br>
+                <p>Date de réalisation : 2022</p>
+                <br>
+                <p>Lors de l'année 2022, nous avons dévellopé une application en JavaFx et CSS afin de faciliter au professionnel de l'organisation de mariage leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble.</p>
+                <br>
+                <p>Voici quelques vues de notre application : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/hopack/hopack-1.png" alt="">
+                    <img src="img/hopack/hopack-2.png" alt="">
+                    <img src="img/hopack/hopack-3.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Développement d'un site web de location de service</button>
+            <div class="panel">
+                <p>Nom du projet : Op Heberg</p>
+                <br>
+                <p>Date de réalisation : 2022</p>
+                <br>
+                <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé les maquettes et ainsi qu'un partie d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et Javascript.</p>
+                <br>
+                <p>Voici quelques captures d'écran de ce site : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/op-heberg/op-heberg-1.png" alt="">
+                    <img src="img/op-heberg/op-heberg-2.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
-    
     <script src="js/transition.js"></script>
+    <script src="js/accordion.js"></script>
   </body>
 </html>
