--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ehrler Ethan</title>
-    <link rel="shortcut icon" href="#" type="image/png">
+    <link rel="shortcut icon" href="img/E.png" type="image/png">
     <meta name="description" content="">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
@@ -24,13 +24,77 @@
             </div>
         </nav>
     </header>
-    
     <div class="projects-container">
         <div class="projects-content">
-            <h2>Making an auction website</h2>
+            <button class="accordion">Creation of an auction site</button>
+            <div class="panel">
+                <p>Name of the project : Intemporal</p>
+                <br>
+                <p>Date of realization : 2023</p>
+                <br>
+                <p>I had the opportunity to develop during the year 2023 a watch auction site named within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and Javascript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
+                <br>
+                <p>Here are some screenshots of what I was able to achieve during this project :</p>
+                <br>
+                <div class="image-container">
+                    <img src="img/intemporal/intemporal-1.png" alt="">
+                    <img src="img/intemporal/intemporal-2.png" alt="">
+                    <img src="img/intemporal/intemporal-3.png" alt="">
+                    <img src="img/intemporal/intemporal-4.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Creation of a first site about me</button>
+            <div class="panel">
+                <p>Name of the project : Me</p>
+                <br>
+                <p>Date of realization : 2022</p>
+                <br>
+                <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and Javascript.</p>
+                <br>
+                <p>Here is the link to it :</p>
+                <br>
+                <a href="https://erlow38.github.io/">My site</a>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Development of an event organization application</button>
+            <div class="panel">
+                <p>Name of the project : Hopack</p>
+                <br>
+                <p>Date of realization : 2022</p>
+                <br>
+                <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the IUT 2 of Grenoble.</p>
+                <br>
+                <p>Here are some views of our application : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/hopack/hopack-1.png" alt="">
+                    <img src="img/hopack/hopack-2.png" alt="">
+                    <img src="img/hopack/hopack-3.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">Development of a service rental website</button>
+            <div class="panel">
+                <p>Name of the project : Op Heberg</p>
+                <br>
+                <p>Date of realization : 2022</p>
+                <br>
+                <p>In 2022, I had the opportunity to work with another web developer with whom I realized the mock-ups and also a part of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and Javascript.</p>
+                <br>
+                <p>Here are some screenshots of this site : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/op-heberg/op-heberg-1.png" alt="">
+                    <img src="img/op-heberg/op-heberg-2.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
-    
     <script src="js/transition.js"></script>
+    <script src="js/accordion.js"></script>
   </body>
 </html>
