--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ehrler Ethan</title>
-    <link rel="shortcut icon" href="#" type="image/png">
+    <link rel="shortcut icon" href="img/E.png" type="image/png">
     <meta name="description" content="">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
