--- a/index-en.html
+++ b/index-en.html
@@ -11,7 +11,7 @@
     <div class="transition transition-slide is-active"></div>
     <header>
         <nav>
-            <h1 class="logo">Ehrler Ethan <img width="30px" src="img/E.png" alt=""></h1>
+            <h1 class="logo">Ehrler Ethan <img src="img/E.png" alt=""></h1>
             <div class="nav-container">
                 <div class="language">
                     <a href="index.html">FR</a>
