--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
         <div class="projects-content">
             <button class="accordion">Creation of an auction site</button>
             <div class="panel">
+                <br>
                 <p>Name of the project : Intemporal</p>
                 <br>
                 <p>Date of realization : 2023</p>
@@ -42,25 +43,27 @@
                     <img src="img/intemporal/intemporal-3.png" alt="">
                     <img src="img/intemporal/intemporal-4.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Creation of a first site about me</button>
             <div class="panel">
+                <br>
                 <p>Name of the project : Me</p>
                 <br>
                 <p>Date of realization : 2022</p>
                 <br>
                 <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and Javascript.</p>
                 <br>
-                <p>Here is the link to it :</p>
+                <p>Here is the link to it : <a href="https://erlow38.github.io/">My site</a></p>
                 <br>
-                <a href="https://erlow38.github.io/">My site</a>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Development of an event organization application</button>
             <div class="panel">
+                <br>
                 <p>Name of the project : Hopack</p>
                 <br>
                 <p>Date of realization : 2022</p>
@@ -74,11 +77,13 @@
                     <img src="img/hopack/hopack-2.png" alt="">
                     <img src="img/hopack/hopack-3.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Development of a service rental website</button>
             <div class="panel">
+                <br>
                 <p>Name of the project : Op Heberg</p>
                 <br>
                 <p>Date of realization : 2022</p>
@@ -91,6 +96,7 @@
                     <img src="img/op-heberg/op-heberg-1.png" alt="">
                     <img src="img/op-heberg/op-heberg-2.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
     </div>
