--- a/projets.html
+++ b/projets.html
@@ -28,6 +28,7 @@
         <div class="projects-content">
             <button class="accordion">Création d'un site de vente aux enchères</button>
             <div class="panel">
+                <br>
                 <p>Nom du projet : Intemporal</p>
                 <br>
                 <p>Date de réalisation : 2023</p>
@@ -42,25 +43,27 @@
                     <img src="img/intemporal/intemporal-3.png" alt="">
                     <img src="img/intemporal/intemporal-4.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Création d'un premier site à propos de moi</button>
             <div class="panel">
+                <br>
                 <p>Nom du projet : Me</p>
                 <br>
                 <p>Date de réalisation : 2022</p>
                 <br>
                 <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et Javascript.</p>
                 <br>
-                <p>Voici le lien de celui-ci :</p>
+                <p>Voici le lien de celui-ci : <a href="https://erlow38.github.io/">Mon site</a></p>
                 <br>
-                <a href="https://erlow38.github.io/">Mon site</a>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Développement d'une application d'organisation évènementielle</button>
             <div class="panel">
+                <br>
                 <p>Nom du projet : Hopack</p>
                 <br>
                 <p>Date de réalisation : 2022</p>
@@ -74,11 +77,13 @@
                     <img src="img/hopack/hopack-2.png" alt="">
                     <img src="img/hopack/hopack-3.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
         <div class="projects-content">
             <button class="accordion">Développement d'un site web de location de service</button>
             <div class="panel">
+                <br>
                 <p>Nom du projet : Op Heberg</p>
                 <br>
                 <p>Date de réalisation : 2022</p>
@@ -91,6 +96,7 @@
                     <img src="img/op-heberg/op-heberg-1.png" alt="">
                     <img src="img/op-heberg/op-heberg-2.png" alt="">
                 </div>
+                <br>
             </div>
         </div>
     </div>
