--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -45,7 +45,7 @@
                 <br>
                 <p>J'ai l'occasion de réaliser un stage de 10 semaine au sein de l'équipe SIGMA du Laboratoire Informatique de Grenoble afin d'étendre un de leur outil à l'aide des langages HTML et CSS.</p>
                 <br>
-                <p>Nombreux de mes projets son également disponible dans la section <a href="projets.html">projets</a>.</p>
+                <p>Nombreux de mes projets son également disponible dans la section <a class="links" href="projets.html">projets</a>.</p>
             </div>
         </div>
     </div>
