--- a/about-me.html
+++ b/about-me.html
@@ -45,7 +45,7 @@
               <br>
               <p>I have the opportunity to realize an internship of 10 weeks within the SIGMA team of the Computer Science Laboratory of Grenoble in order to extend one of their tool using HTML and CSS languages.</p>
               <br>
-              <p>Many of my projects are also available in the section <a href="projects.html">projects</a>.</p>
+              <p>Many of my projects are also available in the section <a class="links" href="projects.html">projects</a>.</p>
           </div>
       </div>
     </div>
