--- a/projets.html
+++ b/projets.html
@@ -56,7 +56,7 @@
                 <br>
                 <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et Javascript.</p>
                 <br>
-                <p>Voici le lien de celui-ci : <a href="https://erlow38.github.io/">Mon site</a></p>
+                <p>Voici le lien de celui-ci : <a class="links" href="https://erlow38.github.io/">Mon site</a></p>
                 <br>
             </div>
         </div>
