--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                 <br>
                 <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and Javascript.</p>
                 <br>
-                <p>Here is the link to it : <a class="links" href="https://erlow38.github.io/">My site</a></p>
+                <p>Here is the link to it : <a class="links" href="https://erlow38.github.io/" target="_blank">My site</a></p>
                 <br>
             </div>
         </div>
