--- a/competences.html
+++ b/competences.html
@@ -24,9 +24,40 @@
             </div>
         </nav>
     </header>
-
-
-
+    <div class="skills-container">
+      <div class="skills-content">
+        <h2>Languages</h2>
+        <div>
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+          <p>PHP</p>
+          <p>SQL</p>
+          <p>Java</p>
+          <p>C++</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>Logiciels/OS</h2>
+        <div>
+          <p>Git</p>
+          <p>Figma</p>
+          <p>VSCode</p>
+          <p>Intellij</p>
+          <p>CLion</p>
+          <p>Linux</p>
+          <p>Windows</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>Humaines</h2>
+        <div>
+          <p>Capacité à travailler en équipe</p>
+          <p>Ponctuel</p>
+          <p>Volonté d'apprendre</p>
+        </div>
+      </div>
+    </div>
     <script src="js/transition.js"></script>
   </body>
 </html>
