--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <br>
                 <p>Date of realization : 2023</p>
                 <br>
-                <p>I had the opportunity to develop during the year 2023 a watch auction site named within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and Javascript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
+                <p>I had the opportunity to develop during the year 2023 a watch auction site named within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and JavaScript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
                 <br>
                 <p>Here are some screenshots of what I was able to achieve during this project :</p>
                 <br>
@@ -54,7 +54,7 @@
                 <br>
                 <p>Date of realization : 2022</p>
                 <br>
-                <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and Javascript.</p>
+                <p>I decided to create a first website summarizing my skills and my projects during the year 2022 in HTML, CSS and JavaScript.</p>
                 <br>
                 <p>Here is the link to it : <a class="links" href="https://erlow38.github.io/" target="_blank">My site</a></p>
                 <br>
@@ -88,7 +88,7 @@
                 <br>
                 <p>Date of realization : 2022</p>
                 <br>
-                <p>In 2022, I had the opportunity to work with another web developer with whom I realized the mock-ups and also a part of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and Javascript.</p>
+                <p>In 2022, I had the opportunity to work with another web developer with whom I realized the mock-ups and also a part of a site offering the possibility to rent servers. The mockups were made with figma and the front-end with HTML, SCSS and JavaScript.</p>
                 <br>
                 <p>Here are some screenshots of this site : </p>
                 <br>
