--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
                 <br>
                 <p>Date de réalisation : 2023</p>
                 <br>
-                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montre nommé au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et Javascript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
+                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montre nommé au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
                 <br>
                 <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
                 <br>
@@ -54,7 +54,7 @@
                 <br>
                 <p>Date de réalisation : 2022</p>
                 <br>
-                <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et Javascript.</p>
+                <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et JavaScript.</p>
                 <br>
                 <p>Voici le lien de celui-ci : <a class="links" href="https://erlow38.github.io/" target="_blank">Mon site</a></p>
                 <br>
@@ -88,7 +88,7 @@
                 <br>
                 <p>Date de réalisation : 2022</p>
                 <br>
-                <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé les maquettes et ainsi qu'un partie d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et Javascript.</p>
+                <p>En 2022, j'ai eu l'occasion de travailler avec un autre développeur web avec lequel j'ai réalisé les maquettes et ainsi qu'un partie d'un site offrant la possibilité de louer des serveurs. Les maquettes ont été réalisé à l'aide de figma et le front-end en HTML, SCSS et JavaScript.</p>
                 <br>
                 <p>Voici quelques captures d'écran de ce site : </p>
                 <br>
