--- a/competences.html
+++ b/competences.html
@@ -26,7 +26,7 @@
     </header>
     <div class="skills-container">
       <div class="skills-content">
-        <h2>Languages</h2>
+        <h2>Languages informatiques</h2>
         <div>
           <p>HTML</p>
           <p>CSS</p>
@@ -55,6 +55,14 @@
           <p>Capacité à travailler en équipe</p>
           <p>Ponctuel</p>
           <p>Volonté d'apprendre</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>Langues parlées</h2>
+        <div>
+          <p>Français (courant)</p>
+          <p>Anglais (B2)</p>
+          <p>Espagnol (B1)</p>
         </div>
       </div>
     </div>
