--- a/about-me.html
+++ b/about-me.html
@@ -27,8 +27,9 @@
     <div class="about-container">
       <div class="about-content">
           <div class="about">
-              <h2 class="title">Ehrler Ethan</h2>
-              <p class="text">My name is Ehrler Ethan and I'm a student at the Computer Science University of Grenoble in my second year. I enjoy web development as well as design and drawing. I am someone who likes to work in a team but is also able to work alone. 
+              <h3>Profile</h3>
+              <br>
+              <p>My name is Ehrler Ethan and I'm a student at the Computer Science University of Grenoble in my second year. I enjoy web development as well as design and drawing. I am someone who likes to work in a team but is also able to work alone. 
                 work alone. I am a very curious person and I like to learn new things. I am very interested in music. I am also passionate about cars and motorcycles. I have the A1 license (125cm3) as well as the B license (car). I also like to watch anime and I like video games such as Minecraft, Forza, Genshin or Cyberpunk.
                 In my life I had the opportunity to practice for 10 years table tennis, karate for two years and I ski regularly since I was very young, discipline where I had lessons. 
               </p>
@@ -46,6 +47,13 @@
               <p>I have the opportunity to realize an internship of 10 weeks within the SIGMA team of the Computer Science Laboratory of Grenoble in order to extend one of their tool using HTML and CSS languages.</p>
               <br>
               <p>Many of my projects are also available in the section <a class="links" href="projects.html">projects</a>.</p>
+              <br>
+              <br>
+              <h3>Contact</h3>
+              <br>
+              <p>ethan.ehrler@outlook.com</p>
+              <br>
+              <p>06 16 52 07 25</p>
           </div>
       </div>
     </div>
