--- a/skills.html
+++ b/skills.html
@@ -24,9 +24,48 @@
             </div>
         </nav>
     </header>
-
-
-
+    <div class="skills-container">
+      <div class="skills-content">
+        <h2>programming languages</h2>
+        <div>
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+          <p>PHP</p>
+          <p>SQL</p>
+          <p>Java</p>
+          <p>C++</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>Software/OS</h2>
+        <div>
+          <p>Git</p>
+          <p>Figma</p>
+          <p>VSCode</p>
+          <p>Intellij</p>
+          <p>CLion</p>
+          <p>Linux</p>
+          <p>Windows</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>Soft skills</h2>
+        <div>
+          <p>Teamwork</p>
+          <p>Ponctual</p>
+          <p>Willingness to learn</p>
+        </div>
+      </div>
+      <div class="skills-content">
+        <h2>languages spoken</h2>
+        <div>
+          <p>French (mother tongue)</p>
+          <p>English (B2)</p>
+          <p>Spanish (B1)</p>
+        </div>
+      </div>
+    </div>
     <script src="js/transition.js"></script>
   </body>
 </html>
