--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -30,8 +30,8 @@
                 <h3>Profil</h3>
                 <br>
                 <p>Je m'appelle Ehrler Ethan et je suis étudiant à l'Université Informatique de Grenoble en deuxième année. J'apprécie le développement web ainsi que le design et le dessin. Je suis quelqu'un qui aime travailler en équipe mais qui est tout autant capable de 
-                  travailler seul. Je suis quelqu'un de très curieux et qui aime apprendre de nouvelles choses. Je suis très interessé par la musique. Je suis également passionné par l'automobile et les motos. Je possède le permis A1 (125cm3) aisni que le permis B (voiture). J'aime également regarder des animés ainsi que les jeux vidéos tel que Minecraft, Forza, Genshin ou encore Cyberpunk.
-                  Dans ma vie j'ai eu l'occasion de pratiquer pendant 10 ans du tennis de table, du karaté pendant deux ans et je ski régulièrment depuis très jeune, discipline ou j'ai eu des cours. 
+                  travailler seul. Je suis quelqu'un de très curieux et qui aime apprendre de nouvelles choses. Je suis très interessé par la musique. Je suis également passionné par l'automobile et les motos. Je possède le permis A1 (125cm3) aisni que le permis B (voiture). J'aime également regarder des animés ainsi que de jouer aux jeux vidéos tel que Minecraft, Forza, Genshin ou encore Cyberpunk.
+                  Dans ma vie j'ai eu l'occasion de pratiquer pendant 10 ans du tennis de table, du karaté pendant deux ans et je skie régulièrment depuis très jeune, discipline pour laquelle j'ai pu suivre des cours. 
                 </p>
                 <br>
                 <br>
@@ -39,14 +39,14 @@
                 <br>
                 <p>BUT Informatique, IUT 2 Grenoble, UGA, France. De 2021 à ce jour</p>
                 <br>
-                <p>Baccalauréat technologique spécialitée architechture, Lycée l'Oiselet, Bourgoin-Jallieu, France. De 2018 à 2021</p>
+                <p>Baccalauréat technologique spécialité architechture, Lycée l'Oiselet, Bourgoin-Jallieu, France. De 2018 à 2021</p>
                 <br>
                 <br>
                 <h3>Expériences</h3>
                 <br>
                 <p>J'ai l'occasion de réaliser un stage de 10 semaine au sein de l'équipe SIGMA du Laboratoire Informatique de Grenoble afin d'étendre un de leur outil à l'aide des langages HTML et CSS.</p>
                 <br>
-                <p>Nombreux de mes projets son également disponible dans la section <a class="links" href="projets.html">projets</a>.</p>
+                <p>Nombreux de mes projets sont également disponibles dans la section <a class="links" href="projets.html">projets</a>.</p>
                 <br>
                 <br>
                 <h3>Contact</h3>
