--- a/about-me.html
+++ b/about-me.html
@@ -30,16 +30,16 @@
               <h3>Profile</h3>
               <br>
               <p>My name is Ehrler Ethan and I'm a student at the Computer Science University of Grenoble in my second year. I enjoy web development as well as design and drawing. I am someone who likes to work in a team but is also able to work alone. 
-                work alone. I am a very curious person and I like to learn new things. I am very interested in music. I am also passionate about cars and motorcycles. I have the A1 license (125cm3) as well as the B license (car). I also like to watch anime and I like video games such as Minecraft, Forza, Genshin or Cyberpunk.
+                I am a very curious person and I like to learn new things. I am very interested in music. I am also passionate about cars and motorcycles. I have the A1 license (125cm3) as well as the B license (car). I also like to watch anime and I like video games such as Minecraft, Forza, Genshin or Cyberpunk.
                 In my life I had the opportunity to practice for 10 years table tennis, karate for two years and I ski regularly since I was very young, discipline where I had lessons. 
               </p>
               <br>
               <br>
               <h3>Education</h3>
               <br>
-              <p>Bachelor of Sciences in Coputer Sciences, University Institute of Technology, UGA, Grenoble, France. From 2021 to date.</p>
+              <p>Bachelor of Sciences in Computer Sciences, University Institute of Technology, UGA, Grenoble, France. From 2021 to date.</p>
               <br>
-              <p>High school degree speciality architecture, Lycée l'Oiselet, Bourgoin-Jallieu, France. From 2018 to date.</p>
+              <p>High school degree speciality architecture, Lycée l'Oiselet, Bourgoin-Jallieu, France. From 2018 to 2021.</p>
               <br>
               <br>
               <h3>Experience</h3>
