--- a/projects.html
+++ b/projects.html
@@ -26,14 +26,14 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">Creation of an auction site</button>
+            <button class="accordion">Creation of an auction webite</button>
             <div class="panel">
                 <br>
                 <p>Name of the project : Intemporal</p>
                 <br>
                 <p>Date of realization : 2023</p>
                 <br>
-                <p>I had the opportunity to develop during the year 2023 a watch auction site named within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and JavaScript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
+                <p>I had the opportunity to develop during the year 2023 a watch auction website named Intemporal within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and JavaScript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
                 <br>
                 <p>Here are some screenshots of what I was able to achieve during this project :</p>
                 <br>
