--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
                 <br>
                 <p>Date de réalisation : 2023</p>
                 <br>
-                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montre nommé au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
+                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
                 <br>
                 <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
                 <br>
@@ -68,7 +68,7 @@
                 <br>
                 <p>Date de réalisation : 2022</p>
                 <br>
-                <p>Lors de l'année 2022, nous avons dévellopé une application en JavaFx et CSS afin de faciliter au professionnel de l'organisation de mariage leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble.</p>
+                <p>Lors de l'année 2022, nous avons développé une application en JavaFx et CSS afin de faciliter aux professionnels de l'organisation de mariages leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble.</p>
                 <br>
                 <p>Voici quelques vues de notre application : </p>
                 <br>
