--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
     </header>
     <div class="skills-container">
       <div class="skills-content">
-        <h2>programming languages</h2>
+        <h2>Programming languages</h2>
         <div>
           <p>HTML</p>
           <p>CSS</p>
@@ -58,9 +58,9 @@
         </div>
       </div>
       <div class="skills-content">
-        <h2>languages spoken</h2>
+        <h2>Languages spoken</h2>
         <div>
-          <p>French (mother tongue)</p>
+          <p>French (native language)</p>
           <p>English (B2)</p>
           <p>Spanish (B1)</p>
         </div>
