--- a/competences.html
+++ b/competences.html
@@ -26,7 +26,7 @@
     </header>
     <div class="skills-container">
       <div class="skills-content">
-        <h2>Languages informatiques</h2>
+        <h2>Langages informatiques</h2>
         <div>
           <p>HTML</p>
           <p>CSS</p>
