--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -51,7 +51,7 @@
                 <br>
                 <h3>Contact</h3>
                 <br>
-                <p>ethan.ehrler@outlook.com</p>
+                <p><a class="links" href = "mailto: ethan.ehrler@outlook.com">ethan.ehrler@outlook.com</a></p>
                 <br>
                 <p>06 16 52 07 25</p>
             </div>
