--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -37,9 +37,9 @@
                 <br>
                 <h3>Formation</h3>
                 <br>
-                <p>BUT Informatique, IUT 2 Grenoble, UGA, France. De 2021 à ce jour</p>
+                <p>BUT Informatique, IUT 2 Grenoble, UGA, France. De 2021 à ce jour.</p>
                 <br>
-                <p>Baccalauréat technologique spécialité architechture, Lycée l'Oiselet, Bourgoin-Jallieu, France. De 2018 à 2021</p>
+                <p>Baccalauréat technologique spécialité architechture, Lycée l'Oiselet, Bourgoin-Jallieu, France. De 2018 à 2021.</p>
                 <br>
                 <br>
                 <h3>Expériences</h3>
