--- a/projets.html
+++ b/projets.html
@@ -12,7 +12,7 @@
     <div class="transition transition-slide is-active"></div>
     <header>
         <nav>
-            <a class="back" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #471ca8 ;transform: msFilter"><path d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"></path></svg><h1 class="title">Mes projets</h1></a> 
+            <a class="back" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #4579e7 ;transform: msFilter"><path d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"></path></svg><h1 class="title">Mes projets</h1></a> 
             <div class="nav-container">
                 <div class="language">
                     <a href="projects.html">EN</a>
@@ -56,7 +56,7 @@
                 <br>
                 <p>J'ai décidé de créer un premier site internet récapitulant mes compétences ainsi que mes projets lors de l'année 2022 en HTML, CSS et JavaScript.</p>
                 <br>
-                <p>Voici le lien de celui-ci : <a class="links" href="https://erlow38.github.io/" target="_blank">Mon site</a></p>
+                <p>Voici le lien de celui-ci : <a class="links" href="https://erlow38.github.io/me" target="_blank">Mon site</a></p>
                 <br>
             </div>
         </div>
