--- a/index-en.html
+++ b/index-en.html
@@ -85,6 +85,7 @@
             <div class="button-container">
                 <button onclick="window.location.href='projects.html';">Projects</button>
                 <button onclick="window.location.href='skills.html';">Skills</button>
+                <button onclick="window.location.href='rewards.html';">Rewards</button>
                 <button onclick="window.location.href='about-me.html';">About me</button>
             </div>
         </div>
