--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <div class="button-container">
                 <button onclick="window.location.href='projets.html';">Projets</button>
                 <button onclick="window.location.href='competences.html';">Compétences</button>
+                <button onclick="window.location.href='recompenses.html';">Récompenses</button>
                 <button onclick="window.location.href='a-propos-de-moi.html';">A propos de moi</button>
             </div>
         </div>
