--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,9 @@
                 <br>
                 <p>Date of realization : 2023</p>
                 <br>
-                <p>I had the opportunity to develop during the year 2023 a watch auction website named Intemporal within a team of 6 people. I was in charge of the layout as well as the HTML, CSS and JavaScript development of our site. This project was realized at the IUT 2 of Grenoble.</p>
+                <p>I had the opportunity to develop during the year 2023 an auction site of watches named Intemporal within a team of 6 persons. This project was realized at the University Institute of Technology in Computer Sciences of Grenoble. I was in charge of the layout as well as the HTML, CSS and JavaScript realization of our site.
+                    I worked on the ergonomic criteria of Bastien and Scapin in order to guarantee a good user experience, for example checking the contrasts with Adobe color.
+                    I also had the opportunity to make user tests to people outside our team in order to improve our site, especially with the help of SUS questionnaire which were passed with flying colors.</p>
                 <br>
                 <p>Here are some screenshots of what I was able to achieve during this project :</p>
                 <br>
@@ -42,6 +44,16 @@
                     <img src="img/intemporal/intemporal-2.png" alt="">
                     <img src="img/intemporal/intemporal-3.png" alt="">
                     <img src="img/intemporal/intemporal-4.png" alt="">
+                </div>
+                <br>
+                <p>The back-end of our site was developed in PHP and the database was in Sqlite. We used websocket to be able to bid in real time. We also focused on security by hashing and salting passwords using argon2 and more.
+                    Unit tests as well as automated tests using Selenium were performed in order to verify the proper functioning of our site.
+                </p>
+                <br>
+                <p>This project earned us a prize from the jury of the University Institute of Technology in Computer Sciences of Grenoble for the quality of our prototype : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/rewards/prototype.jpg" alt="">
                 </div>
                 <br>
             </div>
