--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,10 @@
                 <br>
                 <p>Date de réalisation : 2023</p>
                 <br>
-                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site. Ce projet a été réalisé à l'IUT 2 de Grenoble.</p>
+                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. Ce projet a été réalisé à l'IUT 2 de Grenoble. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site.
+                    J'ai travaillé sur les critères ergonomiques de Bastien et Scapin afin de garantir une bonne expérience utilisateur, par exemple vérifier les contrastes à l'aide d'Adobe color.
+                    J'ai également eu l'occasion de faire passer tests utilisateurs à des personnes extérieures à notre équipe afin de pouvoir améliorer notre site, notamment à l'aide de questionnaires SUS qui ont été passé avec brio.
+                </p>
                 <br>
                 <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
                 <br>
@@ -42,6 +45,16 @@
                     <img src="img/intemporal/intemporal-2.png" alt="">
                     <img src="img/intemporal/intemporal-3.png" alt="">
                     <img src="img/intemporal/intemporal-4.png" alt="">
+                </div>
+                <br>
+                <p>Le back-end de notre site a été développé en PHP et la base de données quant à elle était en Sqlite. Nous avons utilisé des websocket afin de pouvoir enchérir en temps réel. Nous avons également mis l'accent sur la sécurité en hachant et salant les mots de passe à l'aide d'argon2 et plus encore.
+                    Des tests unitaires ainsi que des tests automatisés à l'aide de Selenium ont été réalisés afin de pouvoir vérifier le bon fonctionnement de notre site.
+                </p>
+                <br>
+                <p>Ce projet nous a valu un prix du jury de l'IUT Informatique de Grenoble pour la qualité de notre prototype : </p>
+                <br>
+                <div class="image-container">
+                    <img src="img/rewards/prototype.jpg" alt="">
                 </div>
                 <br>
             </div>
